applets/weather: Expose and use default units directly

In the weather applet we want to have locale-aware default units
(ex ºF vs ºC) instead of hardcoded defaults in the config.xml.

This was done by writing these defaults into the config if empty.
This worked while doing so from the applet constructor, which was
wrong and caused other bugs. Setting them in the `init()` method
doesn't work either as the applet QML configuration is not correctly
updated from config at this point.

Instead, let's expose these defaults in the units model and use them
as actual fallback values in QML, which should be more robust that
messing with the plasma configuration, while also reducing the custom
WeatherApplet code.

BUG: 503138
FIXED-IN: 6.3.5